# embedded_programming_skills

./: .gitignore  01-项目启动说明书.md  11-Linux内核C编码规范  12-C语言应用编码规范  13-用于API文档自动生成的doxygen注释规范  CMakeLists.txt  Doxyfile  Makefile  README.md  aDoxygenDemo.h  automake  automake.txt  demo  main.c  main.h  publicdef.h  vimrc
00_doc/00-项目管理/: 12-C语言应用编码规范.md
0_doc/: 02-C语言框架讲解.md
0_doc/00-项目管理/: 13-用于API文档自动生成的doxygen注释规范.md
1_src/: gpio-jim.c
1_src/01-c_comments/: main.c
1_src/02-print_control/: print_ctrl.c
1_src/04-loop_buffer/: loop_buffer.c  loop_buffer_v2.c
1_src/05-queue/: queue.c
1_src/06-route_module/: Makefile  main.c  module1.c  module1.h  module2.c  module2.h  module3.c  module3.h  route.c  route.h  route_table.c  route_table.h
1_src/07-error_no/: errno.h
1_src/08-file_string_rand/: Makefile  main.c  弹幕-正式版.txt
1_src/09-get_all_file_names_from_dir/: Makefile  get_filenames.c
1_src/1-c_comments/: main.c
1_src/11-error_no/: errno.h
1_src/2-print_control/: main.c  print_ctrl.c  print_ctrl.h
1_src/2-test/: test.c  test.h
1_src/3-console_menu/: main.c  menu.c  menu.h
1_src/5-queue/: queue.c  queue.h
1_src/6-module-route/: main.c
1_src/FileWrite/: fwriteTest.c
1_src/LowPowerADC_RTC_GPIO/: test.c
1_src/Weekly_contest/: weekly_contest1_jim.c
1_src/Weekly_contest1/: weekly_contest1_jim.c  weekly_contest2_jim.c
1_src/_communicate_packet/: packet_parser.c
1_src/adcIntr/: adcIntr.c
1_src/cir_buf/: loop_buffer.c
1_src/ezxml/: ezxml.c  原始地址  (+2 more)
4_automakeBuild/: .gitignore  Makefile  Makefile.am  Makefile.in  configure  configure.ac
(+26 files in other folders)
